--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,15 +1,18 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1>{% block title %}Registro{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
+    <label for="username">Nombre de usuario</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
+    <label for="password">Contraseña</label>
     <input type="password" name="password" id="password" required>
+    <label for = "verif_password" > verificar contraseña </label>
+    <input type = "password" name="verif_password" id = "verif_password" required>
     <input type="submit" value="Register">
+
   </form>
 {% endblock %}
